--- a/pair.html
+++ b/pair.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KERM LITE PAIRING</title>
+  <title>KERM MD V3 PAIRING</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <style>
@@ -168,7 +168,7 @@
  <body>
   <div class="container">
    <div class="header">
-    <h1>KERM LITE⚡️</h1>
+    <h1>KERM MD V3</h1>
    </div>
    <div class="main">
     <form>
@@ -176,7 +176,7 @@
       <i class="fa fa-user"></i>
       <input type="tel" id="number" placeholder="Enter phone number with country code" required />
      </div>
-     <button id="submit">Submit⚡️</button>
+     <button id="submit">Submit🔮</button>
      <main id="pair"></main>
     </form>
    </div>
@@ -196,7 +196,7 @@
     let text = document.getElementById('copy').innerText
     let obj = document.getElementById('copy')
     await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''))
-    obj.innerText = 'COPIED⚡️'
+    obj.innerText = 'COPIED❤️'
     obj.style = 'color:blue;font-weight:bold'
     obj.size = '5'
     setTimeout(() => {
